# log-tester

./: README.adoc
logtesterlib/: Cargo.toml
logtesterlib/src/: lib.rs
logtestermain/: Cargo.toml
logtestermain/src/: main.rs
logtestermain/src/hello/: mod.rs
