[package]
name = "logtestermain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logtesterlib = { path = "../logtesterlib" }
tracing = { version = "*" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"]}